Make expand-collapse icons fixed width smaller

--- a/css/site.css
+++ b/css/site.css
@@ -308,3 +308,7 @@ i.refresh-comments {
 .btn.expand-collapse-all {
   min-width: 14rem;
 }
+
+.fa.fa-fw.expand-collapse {
+  width: .75rem;
+}
